Update js audi car.html

--- a/js audi car.html
+++ b/js audi car.html
@@ -141,7 +141,7 @@ document.getElementById("transm3").innerHTML = mycar3.transm;
           discount="1.5 lakh";
          break;
     }
-    document.getElementById("onroad").innerHtml= month+"month of 2021 discount price on vehicle is amount of"+discount;
+    document.getElementById("onroad").innerHTML= month+"month of 2021 discount price on vehicle is amount of"+discount;
 
 </script>
 
